--- a/GameCore/package.json
+++ b/GameCore/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nexus-civitas-dev",
+  "name": "nexus-civitas-game",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,10 +10,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.3",
-    "react-router-dom": "^6.30.0",
-    "react-scripts": "5.0.1",
-    "styled-components": "^5.3.10",
-    "web-vitals": "^2.1.4"
+    "react-router-dom": "^6.11.2",
+    "react-scripts": "^5.0.1",
+    "styled-components": "^6.0.0-rc.3",
+    "three": "^0.155.0",
+    "use-sound": "^4.0.1",
+    "web-vitals": "^2.1.4",
+    "d3": "^7.8.4"
   },
   "scripts": {
     "start": "react-scripts start",
